--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
    },
    "dependencies": {
       "@scrypted/sdk": "^0.5.12",
+      "adm-zip": "^0.5.16",
+      "follow-redirects": "^1.15.9",
       "openai": "^5.3.0"
    },
    "devDependencies": {
+      "@types/adm-zip": "^0.5.7",
+      "@types/follow-redirects": "^1.14.4",
       "@types/node": "^24.0.1"
    }
 }
