--- a/package.json
+++ b/package.json
@@ -20,14 +20,10 @@
       "interfaces": [
          "DeviceProvider",
          "DeviceCreator"
-      ],
-      "labels": {
-         "require": [
-            "@scrypted/coreml"
-         ]
-      }
+      ]
    },
    "dependencies": {
+      "@scrypted/deferred": "^0.0.5",
       "@scrypted/sdk": "^0.5.12",
       "adm-zip": "^0.5.16",
       "follow-redirects": "^1.15.9",
