--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@scrypted/llm",
-      "keywords": [
+   "keywords": [
       "scrypted",
       "plugin",
       "llama.cpp",
@@ -45,5 +45,6 @@
       "@types/adm-zip": "^0.5.7",
       "@types/follow-redirects": "^1.14.4",
       "@types/node": "^24.0.1"
-   }
+   },
+   "version": "0.0.2"
 }
