--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
+        "target": "es2022",
         "moduleResolution": "bundler",
         "module": "ESNext",
         "strict": true,
