--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       "openai": "^5.8.2"
    },
    "devDependencies": {
+      "@scrypted/types": "^0.5.23",
       "@types/adm-zip": "^0.5.7",
       "@types/follow-redirects": "^1.14.4",
       "@types/node": "^22.15.3"
