--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "scrypted-package-json": "scrypted-package-json"
    },
    "scrypted": {
+      "rollup": true,
       "name": "llm",
       "type": "LLM",
       "interfaces": [
