--- a/package.json
+++ b/package.json
@@ -31,15 +31,27 @@
       "type": "LLM",
       "interfaces": [
          "DeviceProvider",
-         "DeviceCreator"
-      ]
+         "DeviceCreator",
+         "HttpRequestHandler",
+         "UserDatabase"
+      ],
+      "interfaceDescriptors": {
+         "UserDatabase": {
+            "name": "UserDatabase",
+            "methods": [
+               "openDatabase"
+            ],
+            "properties": []
+         }
+      }
    },
    "dependencies": {
       "@scrypted/deferred": "^0.0.8",
-      "@scrypted/sdk": "^0.5.30",
-      "@scrypted/types": "^0.5.28",
+      "@scrypted/sdk": "^0.5.32",
+      "@scrypted/types": "^0.5.30",
       "adm-zip": "^0.5.16",
       "follow-redirects": "^1.15.9",
+      "level": "^10.0.0",
       "openai": "^5.9.0"
    },
    "devDependencies": {
@@ -52,5 +64,5 @@
    "optionalDependencies": {
       "jsdom": "^26.1.0"
    },
-   "version": "0.0.40"
+   "version": "0.0.41"
 }
