--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
       "adm-zip": "^0.5.16",
       "follow-redirects": "^1.15.9",
       "level": "^10.0.0",
-      "openai": "^6.1.0"
+      "openai": "^6.1.0",
+      "random-words": "^2.0.1"
    },
    "devDependencies": {
       "@mozilla/readability": "^0.6.0",
@@ -65,5 +66,5 @@
       "@modelcontextprotocol/sdk": "^1.17.0",
       "jsdom": "^26.1.0"
    },
-   "version": "0.0.66"
+   "version": "0.0.67"
 }
